fix: [distributed HA] Report unavailable logical ranges in replicated s… [DANI-10268]
[distributed HA] Report unavailable logical ranges in replicated search fanout

Planned-By: codex